# tower-defense-cpp

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Meeting-notes.md  README.md  meson.build
.metals/: metals.mv.db
fonts/: open-sans.zip:Zone.Identifier
rsrc/: highscores.json  level.csv
rsrc/maps/: map1.json  map2.json  map3.json  map4.json  map5.json
src/: attackplane.cpp  attackplane.hpp  background_renderer.cpp  background_renderer.hpp  bullet.cpp  bullet.hpp  button.hpp  button_sprite.hpp  button_text.hpp  cannon.cpp  cannon.hpp  enemy.cpp  enemy.hpp  enemy_path_renderer.cpp  enemy_path_renderer.hpp  enemy_wave.cpp  enemy_wave.hpp  fighterplane.cpp  fighterplane.hpp  footsoldier.cpp  footsoldier.hpp  game.cpp  game.hpp  gamegrid.cpp  gamegrid.hpp  gameloop.cpp  gameloop.hpp  gameobject.cpp  gameobject.hpp  gameobject_renderer.cpp  gameobject_renderer.hpp  highscore_renderer.cpp  highscore_renderer.hpp  highscores.cpp  highscores.hpp  levelinfo_renderer.cpp  levelinfo_renderer.hpp  main.cpp  main_old.cpp  map_parser.cpp  (+41 more)
tests/: game_test.cpp  test_example.cpp  unit_tests
